# esri_geobim

./: .gitmodules  CMakeLists.txt  README.md  context.h  geobim.cpp  global_execution_context.cpp  global_execution_context.h  opening_collector.cpp  opening_collector.h  processing.cpp  processing.h  radius_comparison.cpp  radius_comparison.h  radius_execution_context.cpp  radius_execution_context.h  settings.cpp  settings.h  timer.h  utils.h  writer.h
test/fixtures/: same_wall_different_material_intersecting.ifc  schependomlaan_covering.ifc
